# AndroidLearning

./: .gitignore  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/aidl/cradle/rancune/learningandroid/aidl/: IBookManager.aidl  IOnNewBookArrivedListener.aidl
app/src/main/assets/filter/: oes_base_fragment.frag  oes_base_vertex.vert  saturation.frag
app/src/main/assets/shader/: baseOES.frag  baseTexture2D.frag  baseTexture2D.vert  basic.frag  basic.vert  colortriangle.vert  saturation.frag  shape.vert  texture.frag  texture.vert
app/src/main/java/cradle/rancune/learningandroid/: BaseActivity.java  Constants.java  MainActivity.java
app/src/main/res/layout/: activity_aidl_client.xml  activity_jni_test.xml  activity_main.xml  activity_opengl01.xml  activity_opengl_camera.xml  activity_opengl_egl.xml  activity_record_audio.xml  activity_record_screen.xml  activity_saturation.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
jni/: CMakeLists.txt
jni/src/main/: AndroidManifest.xml
jni/src/main/cpp/: cradle_rancune_learningandroid_jni_JniUtils.cpp  cradle_rancune_learningandroid_jni_JniUtils.h  tv_chushou_basis_rtmp_JniUtils.cpp  tv_chushou_basis_rtmp_JniUtils.h
jni/src/main/java/cradle/rancune/learningandroid/jni/: JniUtils.java
rtmp/: CMakeLists.txt  build.gradle
rtmp/src/main/: AndroidManifest.xml
rtmp/src/main/cpp/: tv_chushou_basis_rtmp_JniUtils.cpp  tv_chushou_basis_rtmp_JniUtils.h
rtmp/src/main/java/tv/chushou/basis/rtmp/: JniUtils.java
(+75 files in other folders)
